--- a/examples/advanced/更换镜像源.md
+++ b/examples/advanced/更换镜像源.md
@@ -10,14 +10,10 @@
 在QPT导入后输入`qpt.set_default_pip_source(镜像源地址)`即可进行设置
 
 ```python
-from qpt.smart_opt import set_default_pip_source, DOUBAN_PIP_SOURCE, BAIDU_PIP_SOURCE
+from qpt.smart_opt import set_default_pip_source
 from qpt.executor import CreateExecutableModule
 
-# 此处以豆瓣源为例
-set_default_pip_source(DOUBAN_PIP_SOURCE)
-# 当然也可设置为百度源
-set_default_pip_source(BAIDU_PIP_SOURCE)
-# 甚至随便一个镜像源
+# 设置一个镜像源
 set_default_pip_source("https://pypi.tuna.tsinghua.edu.cn/simple")
 
 if __name__ == '__main__':
