--- a/examples/advanced/更换镜像源.md
+++ b/examples/advanced/更换镜像源.md
@@ -26,5 +26,5 @@ if __name__ == '__main__':
 执行上述代码后会输出以下字样
 
 ```
-DEBUG:   	已设置PIP镜像源为：https://pypi.douban.com/simple
+DEBUG:   	已设置PIP镜像源为：https://pypi.tuna.tsinghua.edu.cn/simple
 ```
